@@ -7,6 +7,8 @@ import uk.gov.hmrc.versioning.SbtGitVersioning.autoImport.majorVersion
 
 val appName = "awrs-frontend"
 
+val coursierDirectory = sys.env.getOrElse("COURSIER_REPOSITORIES", "https/repo1.maven.org/maven2")
+
 ThisBuild / majorVersion := 3
 ThisBuild / scalaVersion := "2.13.16"
 
@@ -37,10 +39,9 @@ lazy val microservice = Project(appName, file("."))
     Test / parallelExecution := false,
     Test / javaOptions ++= Seq(
       "-Dconfig.resource=test.application.conf",
-      "-XX:+EnableDynamicAgentLoading"
+      s"-javaagent:${csrCacheDirectory.value.getAbsolutePath}/$coursierDirectory/org/mockito/mockito-core/${AppDependencies.mockitoVersion}/mockito-core-${AppDependencies.mockitoVersion}.jar"
     ),
   )
-
   .settings(
     scalacOptions ++= Seq("-Wconf:src=target/.*:s", "-Wconf:src=routes/.*:s", "-Wconf:cat=unused-imports&src=html/.*:s", "-feature"),
     TwirlKeys.templateImports ++= Seq(
